--- a/0x02-i18n/translations/fr/LC_MESSAGES/messages.po
+++ b/0x02-i18n/translations/fr/LC_MESSAGES/messages.po
@@ -25,3 +25,10 @@ msgstr "Bienvenue chez Holberton"
 # Home h1
 msgid "home_header"
 msgstr "Bonjour monde!"
+
+# logged
+msgid "logged_in_as"
+msgstr "Vous êtes connecté en tant que %(username)s."
+
+msgid "not_logged_in"
+msgstr "Vous n'êtes pas connecté."
